feat: add QR code template selector with color customization and new templates

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -335,7 +335,29 @@
         "instruction1": "Share this link or QR code with your guests",
         "instruction2": "Guests will be able to upload photos and leave messages",
         "instruction3": "You'll see all photos and messages here in your dashboard",
-        "scanQR": "Scan the QR code for direct access to the guest page."
+        "scanQR": "Scan the QR code for direct access to the guest page.",
+        "previewTemplate": "Preview QR code on template",
+        "selectTemplate": "Select template",
+        "downloadTemplate": "Download template",
+        "downloaded": "Downloaded",
+        "generatingPreview": "Generating preview...",
+        "templateAlt": "QR code on template",
+        "template1": "Elegant template",
+        "template2": "Rustic template",
+        "hiddenQrCode": "Hidden QR code for generation",
+        "templateSelection": "Template selection (thumbnails only)",
+        "generatedResult": "Generated result display",
+        "hiddenCanvas": "Canvas for image generation (hidden)",
+        "templateTitle": "QR Code Templates",
+        "basicQr": "Basic QR Code",
+        "templateQr": "QR Code Templates",
+        "download": "Download",
+        "useTemplate": "Use free template",
+        "template3": "Modern template",
+        "template4": "Minimal template",
+        "selectColor": "Select color",
+        "customColor": "Custom color",
+        "colorPalette": "Color palette"
       },
       "guestList": {
         "guestsWithPhotos": "Guests with photos",
