--- a/locales/sr/translation.json
+++ b/locales/sr/translation.json
@@ -334,7 +334,29 @@
           "instruction1": "Podijelite ovaj link ili QR kod sa vašim gostima",
           "instruction2": "Gosti će moći uploadovati slike i ostaviti poruke",
           "instruction3": "Sve slike i poruke ćete vidjeti ovdje na vašem dashboardu",
-          "scanQR": "Skenirajte QR kod za direktan pristup stranici za goste."
+          "scanQR": "Skenirajte QR kod za direktan pristup stranici za goste.",
+          "previewTemplate": "Pregled QR koda na predlošku",
+          "selectTemplate": "Izaberi predložak",
+          "downloadTemplate": "Preuzmi predložak",
+          "downloaded": "Preuzeto",
+          "generatingPreview": "Generisanje pregleda...",
+          "templateAlt": "QR kod na predlošku",
+          "template1": "Elegantni predložak",
+          "template2": "Rustični predložak",
+          "template3": "Moderni predložak",
+          "template4": "Minimalni predložak",
+          "hiddenQrCode": "Skriveni QR kod za generisanje",
+          "templateSelection": "Izbor predloška (samo sličice)",
+          "generatedResult": "Prikaz generisanog rezultata",
+          "hiddenCanvas": "Platno za generisanje slike (skriveno)",
+          "templateTitle": "Predlošci za QR kod",
+          "selectColor": "Odaberi boju",
+          "customColor": "Prilagođena boja",
+          "colorPalette": "Paleta boja",
+          "basicQr": "Osnovni QR kod",
+          "templateQr": "Predlošci za QR kod",
+          "download": "Preuzmi",
+          "useTemplate": "Koristi besplatan predložak"
         },
         "guestList": {
           "guestsWithPhotos": "Gosti sa slikama",
